--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Evento | Free Onepage Event Template | ShapeBootstrap</title>
+        <title>Factor de Cambio</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
@@ -49,10 +49,10 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">                 
                                 <li class="scroll active"><a href="#home">Inicio</a></li>
-                                <li class="scroll"><a href="#about">¿Quiénes Sómos?</a></li>                     
-                                <li class="scroll"><a href="#explore">Proximo Evento</a></li>                         
+                                <li class="scroll"><a href="#about">Conócenos</a></li>                     
+                                <!--<li class="scroll"><a href="#explore">Proximo Evento</a></li>-->                         
                                 <li class="scroll"><a href="#event">Eventos</a></li>
-                                <li class="scroll"><a href="#mensajes">Mensajes</a></li>
+                                <li class="scroll"><a href="#mensajes">Crecimiento</a></li>
                                 <li class="scroll"><a href="#contact">Contacta</a></li>       
                             </ul>
                         </div>
@@ -101,50 +101,71 @@
 
         <section id="about">
             <div class="guitar2">				
-                <img class="img-responsive" src="images/guitar2.jpg" alt="guitar">
+                <!--<img class="img-responsive" src="images/guitar2.jpg" alt="guitar">-->
+                <h2>¿Quiénes Sómos?</h2>
+                <p>
+                    Somos un grupo de personas, que hemos tenido un encuentro personal con Cristo;
+                    por eso le servimos con pasión y empeño, dando lo mejor de nosotros, 
+                    enfocados en una misma visión: llegar a la unidad de la fe y del conocimiento del Hijo de Dios,
+                    a una humanidad perfecta, conforme a la plena estatura de Cristo(Ef. 4:13).
+                </p>
+                <p>
+                    Vivimos con gozo la transformación que Dios está realizando en los miembros de nuestra Congregacion.
+                    Cada semana tenemos testimonio de vidas cambiadas, matrimonios y familias restauradas, 
+                    y personas compartiendo el amor de Cristo a otros en un ambiente de libertad.
+                </p>
+                <p>
+                    Queremos invitarte a que te unas a este apasionante viaje junto con la familia de Factor de Cambio.
+                </p>
             </div>
             <div class="about-content">					
-                <h2>¿Quiénes Sómos?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada eget ipsum a consequat. Sed aliquam quam massa, nec ullamcorper quam venenatis id. Ut bibendum enim ut dignissim finibus. Aliquam posuere imperdiet lacinia. Fusce vehicula velit ex, a rhoncus elit fringilla nec. Quisque rhoncus tristique enim. Pellentesque et odio felis. Aliquam egestas malesuada blandit. Vivamus rhoncus rutrum leo, vel ultricies mi efficitur quis. Duis euismod finibus nisi ac viverra. Quisque placerat iaculis sodales. Donec at mi at mauris finibus euismod. Vestibulum feugiat, mauris id volutpat pellentesque, nulla massa pulvinar orci, ut varius diam nunc sit amet quam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi ex dui, faucibus non feugiat a, lacinia nec massa.</p>
+                <h2>¿En qué creemos? </h2>
+                <p>
+                    Creemos que Dios es el creador del universo. 
+                    Que entre toda su creación decidió amarnos al grado de sacrificar a su hijo Jesucristo,
+                    para rescatarnos del mal a quien nosotros mismos nos entregamos.
+                    Ya no somos esclavos del pecado sino de cristo.
+                    Por eso le servimos con todo el corazón, ya que él nos amó primero.
+                </p>
 
             </div>
         </section><!--/#about-->
 
-        <section id="explore">
-            <div class="container">
-                <div class="row">
-                    <div class="watch">
-                        <img class="img-responsive" src="images/watch.png" alt="">
-                    </div>				
-                    <div class="col-md-4 col-md-offset-2 col-sm-5">
-                        <h2>Proximo evento en </h2>
-                    </div>				
-                    <div class="col-sm-7 col-md-6">					
-                        <ul id="countdown">
-                            <li>					
-                                <span class="days time-font">00</span>
-                                <p>dias </p>
-                            </li>
-                            <li>
-                                <span class="hours time-font">00</span>
-                                <p class="">horas </p>
-                            </li>
-                            <li>
-                                <span class="minutes time-font">00</span>
-                                <p class="">minutos</p>
-                            </li>
-                            <li>
-                                <span class="seconds time-font">00</span>
-                                <p class="">segundos</p>
-                            </li>				
-                        </ul>
+        <!--        <section id="explore">
+                    <div class="container">
+                        <div class="row">
+                            <div class="watch">
+                                <img class="img-responsive" src="images/watch.png" alt="">
+                            </div>				
+                            <div class="col-md-4 col-md-offset-2 col-sm-5">
+                                <h2>Proximo evento en </h2>
+                            </div>				
+                            <div class="col-sm-7 col-md-6">					
+                                <ul id="countdown">
+                                    <li>					
+                                        <span class="days time-font">00</span>
+                                        <p>dias </p>
+                                    </li>
+                                    <li>
+                                        <span class="hours time-font">00</span>
+                                        <p class="">horas </p>
+                                    </li>
+                                    <li>
+                                        <span class="minutes time-font">00</span>
+                                        <p class="">minutos</p>
+                                    </li>
+                                    <li>
+                                        <span class="seconds time-font">00</span>
+                                        <p class="">segundos</p>
+                                    </li>				
+                                </ul>
+                            </div>
+                        </div>
+                                        <div class="cart">
+                                            <a href="#"><i class="fa fa-shopping-cart"></i> <span>Purchase Tickets</span></a>
+                                        </div>
                     </div>
-                </div>
-                <!--                <div class="cart">
-                                    <a href="#"><i class="fa fa-shopping-cart"></i> <span>Purchase Tickets</span></a>
-                                </div>-->
-            </div>
-        </section><!--/#explore-->
+                </section>/#explore-->
 
         <section id="event">
             <div class="container">
@@ -211,40 +232,31 @@
             <div class="container">
                 <div class="row">
                     <div class="disk">
-                        <img class="img-responsive" src="images/music_record.png" alt="disk">
+                        <img class="img-responsive" src="images/biblia.png" alt="disk">
                     </div>
                     <div class="col-sm-12 col-md-9">
-                        <div id="mensajes-lista">
-                            <h2 class="heading">THE ROCKING Performers</h2>
+                        <div id="mensajes-lista" class="crecimiento">
+                            <h2 class="heading">Crecimiento</h2>
                             <div>
-                                <div class="mensaje">
-                                    <audio controls>
-                                        <source src="http://www.w3schools.com/html/horse.ogg" type="audio/ogg">
-                                        <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
-                                        Tu navegador no soporta el elemento audio.
-                                        pero lo puedes descargar 
-                                        <a download="horse.mp3" href="http://www.w3schools.com/html/horse.mp3" >aquí</a>
-                                    </audio>
-                                    Uno
-                                </div>
-                                <div class="mensaje">
-                                    <audio controls>
-                                        <source src="http://www.w3schools.com/html/horse.ogg" type="audio/ogg">
-                                        <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
-                                        Tu navegador no soporta el elemento audio.
-                                        pero lo puedes descargar 
-                                        <a download="horse.mp3" href="http://www.w3schools.com/html/horse.mp3" >aquí</a>
-                                    </audio>
-                                    Dos</div>
-                                <div class="mensaje">
-                                    <audio controls>
-                                        <source src="http://www.w3schools.com/html/horse.ogg" type="audio/ogg">
-                                        <source src="http://www.w3schools.com/html/horse.mp3" type="audio/mpeg">
-                                        Tu navegador no soporta el elemento audio.
-                                        pero lo puedes descargar 
-                                        <a download="horse.mp3" href="http://www.w3schools.com/html/horse.mp3" >aquí</a>
-                                    </audio>
-                                    Tres</div>
+                                <h3>
+                                    <a href="http://nikhosideas.org/portfolio/la-historia-de-nikhos/" target="_blank">
+                                        Nikhos
+                                    </a>
+                                </h3>
+                                <img alt="La historia de nikhos" src="images/nikhos.png" class="thumbnail"/>
+
+                                <h3>
+                                    <a href="http://nikhosideas.org/portfolio/ept-nivel-1-solidez/" target="_blank">
+                                        Nivel de edificacion 1 Solidez
+                                    </a>
+                                </h3>
+                                <img alt="Equipamiento para todos, nivel 1 solidez" src="images/Solidez.png" class="thumbnail"/>
+
+                                <h3>
+                                    <a href="http://nikhosideas.org/portfolio/ept-nivel-2-seguridad/" target="_blank">
+                                        Nivel de edificacion 2 Seguidad</a>
+                                </h3>
+                                <img alt="Equipamiento para todos, nivel 2 seguridad" src="images/Seguridad.png" class="thumbnail"/>
                             </div>
                         </div>
                     </div>
@@ -265,7 +277,7 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-3 col-sm-offset-4">
+                        <div class="col-sm-6 col-sm-offset-6">
                             <div class="contact-text">
                                 <h3>Contact</h3>
                                 <address>
@@ -285,26 +297,6 @@
                                 </address>
                             </div>
                         </div>
-                        <div class="col-sm-5">
-                            <div id="contact-section">
-                                <h3>Send a message</h3>
-                                <div class="status alert alert-success" style="display: none"></div>
-                                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php">
-                                    <div class="form-group">
-                                        <input type="text" name="name" class="form-control" required="required" placeholder="Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" name="email" class="form-control" required="required" placeholder="Email ID">
-                                    </div>
-                                    <div class="form-group">
-                                        <textarea name="message" id="message" required="required" class="form-control" rows="4" placeholder="Enter your message"></textarea>
-                                    </div>                        
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary pull-right">Send</button>
-                                    </div>
-                                </form>	       
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>		
@@ -314,7 +306,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="text-center">
-                    <p> Copyright  &copy;2014<a target="_blank" href="http://shapebootstrap.net/"> Evento </a>Theme. All Rights Reserved. <br> Designed by <a target="_blank" href="http://shapebootstrap.net/">ShapeBootstrap</a></p>                
+                    <p> Copyright  &copy;2014<a target="_blank" href="//shapebootstrap.net/"> Evento </a>Theme. All Rights Reserved. <br> Designed by <a target="_blank" href="//shapebootstrap.net/">ShapeBootstrap</a></p>                
                 </div>
             </div>
         </footer>
