--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Factor de Cambio</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
         <link href="css/animate.css" rel="stylesheet">	
@@ -71,7 +71,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">						
+                        <img class="img-responsive" src="images/slider/factor.jpg" alt="slider">						
                         <div class="carousel-caption">
                             <h2>Servicio General</h2>
                             <h4>Domingos a las 11:00 A.M.</h4>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img class="img-responsive" src="images/slider/special praying.jpg" alt="slider">	
+                        <img class="img-responsive" src="images/slider/praying.jpg" alt="slider">	
                         <div class="carousel-caption">
                             <h2>Reunion Especial De Oración</h2>
                             <h4>Ultimo jueves de cada mes 08:00 P.M.</h4>
@@ -99,8 +99,8 @@
         </section>
         <!--/#home-->
 
-        <section id="about">
-            <div class="guitar2">				
+        <section id="about" class="row">
+            <div class="text-section col-xs-12 col-sm-6">				
                 <!--<img class="img-responsive" src="images/guitar2.jpg" alt="guitar">-->
                 <h2>¿Quiénes Sómos?</h2>
                 <p>
@@ -117,8 +117,9 @@
                 <p>
                     Queremos invitarte a que te unas a este apasionante viaje junto con la familia de Factor de Cambio.
                 </p>
+                <a href="quienessomos.html">Leer más...</a>
             </div>
-            <div class="about-content">					
+            <div class="text-section col-xs-12 col-sm-6">					
                 <h2>¿En qué creemos? </h2>
                 <p>
                     Creemos que Dios es el creador del universo. 
@@ -127,6 +128,7 @@
                     Ya no somos esclavos del pecado sino de cristo.
                     Por eso le servimos con todo el corazón, ya que él nos amó primero.
                 </p>
+                <a href="enquecreemos.html">Leer más...</a>
 
             </div>
         </section><!--/#about-->
@@ -172,7 +174,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-9">
                         <div id="event-carousel" class="carousel slide" data-interval="false">
-                            <h2 class="heading">THE ROCKING Performers</h2>
+                            <h2 class="heading">Eventos</h2>
                             <a class="even-control-left" href="#event-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
                             <a class="even-control-right" href="#event-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
                             <div class="carousel-inner">
@@ -180,24 +182,24 @@
                                     <div class="row">
                                         <div class="col-sm-4">
                                             <div class="single-event">
-                                                <img class="img-responsive" src="images/event/event1.jpg" alt="event-image">
-                                                <h4>Reunion de Alabanza</h4>
-                                                <h5>10 julio 2017 12:00:00</h5>
+                                                <img class="img-responsive" src="images/event/juanbosco/1.jpg" alt="event-image">
+                                                <h4>Evangelizando niños en San Juan Bosco</h4>
+                                                <h5>Cada Sabado a la 01:00 P.M.</h5>
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
                                             <div class="single-event">
-                                                <img class="img-responsive" src="images/event/event2.jpg" alt="event-image">
+                                                <img class="img-responsive" src="images/event/juanbosco/2.jpg" alt="event-image">
                                             </div>
                                         </div>
                                         <div class="col-sm-4">
                                             <div class="single-event">
-                                                <img class="img-responsive" src="images/event/event3.jpg" alt="event-image">
+                                                <img class="img-responsive" src="images/event/juanbosco/3.jpg" alt="event-image">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+<!--                                <div class="item">
                                     <div class="row">
                                         <div class="col-sm-4">
                                             <div class="single-event">
@@ -217,12 +219,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
                     <div class="guitar">
-                        <img class="img-responsive" src="images/guitar.png" alt="guitar">
+                        <img class="img-responsive" src="images/calendar.png" alt="guitar">
                     </div>
                 </div>			
             </div>
@@ -306,7 +308,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="text-center">
-                    <p> Copyright  &copy;2014<a target="_blank" href="//shapebootstrap.net/"> Evento </a>Theme. All Rights Reserved. <br> Designed by <a target="_blank" href="//shapebootstrap.net/">ShapeBootstrap</a></p>                
+                    <p> Iglesia bajo cobertura del ministerio apostolico profetico <a target="_blank" href="http://generacionenconquista.org/"> Generacion en conquista</a></p>                
                 </div>
             </div>
         </footer>
@@ -377,7 +379,7 @@
         </script>
 
         <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyCdDKiGDK_T-HnOHFjYtuoqLXn_-IHTt-o" type="text/javascript"></script>
         <script type="text/javascript" src="js/gmaps.js"></script>
         <script type="text/javascript" src="js/smoothscroll.js"></script>
